Kapitel2: Absatz Impacs geschrieben; Kapitelabschluss geschrieben

--- a/s2_related-work.tex
+++ b/s2_related-work.tex
@@ -99,14 +99,34 @@ so wird beim Navigieren durch das Volume in einem Fenster die Position der Schni
 \end{figure}
 
 %----------------------------------------------
-% * 
+% * PACS Workstation - AFGA Impax DS3000
 %----------------------------------------------
-\subsection{XYZ - PACS Workstation}
-\label{sec:XYZ - PACS Workstation}
+\subsection{PACS Workstation - AFGA Impax DS3000}
+\label{sec:PACS_Workstation}
+Die Impax DS3000 Radiologie Diagnosestation ist eine Client-Software für ein PACS System.
+Der Aufbau der Software ist ähnlich wie bei OSIRIX \ref{sec:Osirix} in eine Ebene zum Durchsuchen der Datensätze und eine Betrachtungsebene \ref{fig:impacs_2d_view} unterteilt.
+%
+\begin{figure}[t]
+	\centering
+	\includegraphics[width=0.5\linewidth]{img/c2_impacs_2d_view.jpg}
+	\caption{Betrachtungsebene zum Anzeigen der Series}
+	\label{fig:impacs_2d_view}
+\end{figure}
+%
+Die Ebene für die Datensätze bietet Funktionen zum Durchsuchen von PACS Archiven anhand verschiedene Parameter wie Name, Patientenkennung oder Geburtsdatum.
+Weiters können in dieser Ebene Arbeitslisten erstellt werden, in der sich die RadiologIn eine Menge von Fällen zum Befunden zusammenstellen kann.
+Es gibt auch Tools zum automatischen Erstellen von Arbeitslisten anhand diverser Kriterien wie zum Beispiel alle CT-Aufnahmen des heutigen Tages.
+%
+Die Betrachtungsebene bietet mit den Tools für Fensterung, Positionierung, Zoom, Navigation im Volume und dem einzeichnen von ROIs die selbe Kernfunktionalität wie Osirix.
+Auch bei Impax DS3000 werden diese Funktionen mit der Maus kontrolliert, deren Auswahl über ein Kontextmenu erfolgt welches mit der rechten Maustaste aktiviert wird.
+Auch hier ist eine Aufteilung des Bildschirmes möglich um Bilder aus einer Serie oder aus verschiedenen Serien miteinander zu vergleichen.
 
-%Abschließend angeben dass die Bildsuche bei keinen dieser systeme möglich ist
-
-
-%TODO: Kontakt markus .... was gibst schon
-%TODO: Kontakt markus .... pacs workstations
+%----------------------------------------------
+% * Vergleich der Betrachtungstools
+%----------------------------------------------
+\subsection{Vergleich der Betrachtungstools}
+\label{sec:Vergleich der Betrachtungstools}
+Die Funktionen zur Interaktion mit den Bilddaten sind bei den beiden erwähnten Software-Produkten sehr ähnlich und auch annähernd gleich umgesetzt.
+Osirix hat einige Features wie 3D-Rendering welche zwar für die Forschung interessant sind, für die medizinische Befundung aber größere keine Rolle spielen.
+Funktionen zum Durchsuchen der Datensätze anhand einer Bild-Query weisen bei Produkte nicht auf.
 
