--- a/s2_related-work.tex
+++ b/s2_related-work.tex
@@ -36,7 +36,7 @@ Je nach Funktionsumfang stehen auch Tools zur Befundung zur Verfügung welche di
 \label{sec:DICOM}
 DICOM steht für \emph{Digital Imaging and Communication in Medicine} und ist ein offener,
 Standard welcher die Übertragung und das Speichern von medizinischer Bildinformation spezifiziert.
-Die wesentlichen Teile der Spezifikation sind die Datenstruktur für die Bilddaten und \C{zugehörige Informationen wie Patientendaten oder Daten über das Aufnahmegerät} , 
+Die wesentlichen Teile der Spezifikation sind die Datenstruktur für die Bilddaten und zugehörige Informationen wie Patientendaten oder Daten über das Aufnahmegerät, 
 Services welche auf diesen Daten operieren, Anforderung an DICOM konforme Hard- und Software-Produkte und das Ablegen der Informationen auf einem Datenträger.
 Das Datenmodell setzt sich in Anlehnung an die reale Welt grundlegend aus den Entitäten Patient, Studie, Serie und Image zusammen zwischen denen jeweils eine 1:n oder 0:n Beziehung besteht.
 Es bietet weiters ausreichend Möglichkeiten zur Erweiterung durch einen Definitionsmechnanissmus für alle DICOM Objekte die sogenannte Image Object Defintion \cite{pacs}.
@@ -98,14 +98,13 @@ so wird beim Navigieren durch das Volume in einem Fenster die Position der Schni
 	\label{fig:osirix_2dView_splitWindow}
 \end{figure}
 
-\C{
 %----------------------------------------------
 % * PACS Workstation - AFGA Impax DS3000
 %----------------------------------------------
 \subsection{PACS Workstation - AFGA Impax DS3000}
 \label{sec:PACS_Workstation}
-Die Impax DS3000 Radiologie Diagnosestation ist eine Client-Software für ein PACS System.
-Der Aufbau der Software ist ähnlich wie bei OSIRIX \ref{sec:Osirix} in eine Ebene zum Durchsuchen der Datensätze und eine Betrachtungsebene \ref{fig:impacs_2d_view} unterteilt.
+\R{Als Beispiel für ein in der radiologischen Praxis (am Allgememeinen Krankenhaus Wien AKH) verwendetes state of the art PACS wurde das AFGA Impax DS3000 zum Vergleich herangezogen. }Die Impax DS3000 Radiologie Diagnosestation ist eine Client-Software für ein PACS System.
+Der Aufbau der Software ist ähnlich wie bei OSIRIX \ref{sec:Osirix} in eine Ebene zum Durchsuchen der Datensätze und eine Betrachtungsebene \ref{fig:impacs_2d_view}\Rc{gscheit auf die fig verweisen}  unterteilt.
 %
 \begin{figure}[t]
 	\centering
@@ -114,14 +113,14 @@ Der Aufbau der Software ist ähnlich wie bei OSIRIX \ref{sec:Osirix} in eine Ebe
 	\label{fig:impacs_2d_view}
 \end{figure}
 %
-Die Ebene für die Datensätze bietet Funktionen zum Durchsuchen von PACS Archiven anhand verschiedene Parameter wie Name, Patientenkennung oder Geburtsdatum.
-Weiters können in dieser Ebene Arbeitslisten erstellt werden, in der sich die RadiologIn eine Menge von Fällen zum Befunden zusammenstellen kann.
-Es gibt auch Tools zum automatischen Erstellen von Arbeitslisten anhand diverser Kriterien wie zum Beispiel alle CT-Aufnahmen des heutigen Tages.
+Die Ebene für die Datensätze bietet Funktionen zum Durchsuchen von PACS Archiven anhand verschiedene\R{r} Parameter wie Name, Patientenkennung oder Geburtsdatum.
+Weiters können in dieser Ebene Arbeitslisten erstellt werden, in der sich die RadiologIn \Rd{eine Menge von Fällen zum Befunden}\R{die Fälle für die Befundung} zusammenstellen kann.
+Es gibt auch Tools zum automatischen Erstellen von Arbeitslisten anhand \Rc{diverser} \R{von Suchkriterien}\Rd{  Kriterien} wie zum Beispiel alle CT-Aufnahmen des heutigen Tages.
 %
-Die Betrachtungsebene bietet mit den Tools für Fensterung, Positionierung, Zoom, Navigation im Volume und dem einzeichnen von ROIs die selbe Kernfunktionalität wie Osirix.
-Auch bei Impax DS3000 werden diese Funktionen mit der Maus kontrolliert, deren Auswahl über ein Kontextmenu erfolgt welches mit der rechten Maustaste aktiviert wird.
+Die Betrachtungsebene bietet mit den Tools für Fensterung, Positionierung, Zoom, Navigation im Volume und dem \R{E}\Rd{e}inzeichnen von ROIs die selbe Kernfunktionalität wie Osirix.
+Auch bei Impax DS3000 werden diese Funktionen mit der Maus kontrolliert, deren Auswahl über ein Kontextmenu erfolgt\R{,} welches mit der rechten Maustaste aktiviert wird.
 Auch hier ist eine Aufteilung des Bildschirmes möglich um Bilder aus einer Serie oder aus verschiedenen Serien miteinander zu vergleichen.
-}
+
 
 %----------------------------------------------
 % * Vergleich der Betrachtungstools
