--- a/s1_introduction.tex
+++ b/s1_introduction.tex
@@ -57,9 +57,9 @@ Dazu muss das User-Interface die grundlegenden Funktionen eines Betrachtungstool
 %----------------------------------------------
 \subsubsection{Java basiertes Interface}
 \label{sec:Java basiertes Interface}
-Paralell zu dieser \Rc{welcher dieser, nicht klar }Applikation wurde im Rahmen des K\R{H}RESMOI-Projektes auch einen auf Java basierendes Interface System entwickelt,
-welches eine Schnittstelle zum vollständigen Funktionsumfang von KRESHMOI \Rd{ist}\R{bietet}.
-Bei diesem System gibt es verschiedene Versionen für Desktop, Browser, Mobile und eine spezielle Radiologie-Version \ref{fig:javabased_interface}, welche nur als Java Anwendung vorliegt.
+Paralell zur \C{Applikation in dieser Projketarbeit} wurde im Rahmen des KHRESMOI-Projektes auch einen auf Java basierendes Interface System entwickelt,
+welches eine Schnittstelle zum vollständigen Funktionsumfang von KRESHMOI bietet.
+Bei diesem System gibt es verschiedene Versionen für Desktop, Browser, Mobile und eine spezielle Radiologie-Version (Siehe Figure \ref{fig:javabased_interface}), welche nur als Java Anwendung vorliegt.
 Diese verfügt ebenfalls über Tools zur Betrachtung und Interaktion mit den Volumes und zu erstellen von Bild-Suchanfragen.
 Weiters bietet es Tools zum Durchsuchen von Fällen in einem Krankenhaus und weitere Features wie persönliche Bibliothek und kollaborative Tools.
 Im gegensatz zur Java basierten Radiologie-Version liegt das Augenmerk bei dieser Anwendung auf einen möglichst einfachen Zugriff und Verwendung durch den Browser.
@@ -115,7 +115,7 @@ was bei manchen Betriebssystemen für Mobilgeräte wie Tablets gar nicht möglic
 Als weiterer Nachteil gilt, dass JavaApplets ein nicht zu vernachlässigendes Sicherheitsrisiko darstellen,
 obwohl prinzipiell nicht zertifiziert Applets durch eine Sandbox vom restlichen System isoliert werden.
 Diese entstehen unter anderem durch Schwachstellen in der Sandbox, durch mangelnde Überprüfung der Zertifikate, 
-zu schwache Sicherheitseinstellungen und durch Täuschung der Benutzer mit Testzertifikaten \cite{java_risks_cisico} \cite{java_risks_bmi}.\Rc{2 cites hinterneinander immer in backslach klammer cite1 cite1 klammer} 
+zu schwache Sicherheitseinstellungen und durch Täuschung der Benutzer mit Testzertifikaten \cite{java_risks_cisico, java_risks_bmi}. 
 
 
 %----------------------------------------------
