--- a/s2_related-work.tex
+++ b/s2_related-work.tex
@@ -55,7 +55,7 @@ Das Programm führt eine Datenbank von DICOM Datensätzen,
 welche von DICOM-Dateien importiert bzw. auch wieder als solche exportiert werden können.
 Weiters können über das DICOM-Protokoll die Daten auch von einem PACS-Server geladen werden \cite{osirix}.
 
-Von der Navigationsstruktur unterteilt sich OsiriX in eine Datenbankebene \ref{fig:osirix_db_view} und eine Betrachtungsebene welche jeweils durch verschiedene Fenster umgesetzt wurden.
+Von der Navigationsstruktur unterteilt sich OsiriX in eine Datenbankebene (Siehe Figure \ref{fig:osirix_db_view}) und eine Betrachtungsebene welche jeweils durch verschiedene Fenster umgesetzt wurden.
 Der Vollständigkeit halber sei erwähnt das es auch eine Ebene für 3D Rendering der Volumes gibt welche aber für diese Arbeit nicht relevant ist.
 \begin{figure}[t]
 	\centering
@@ -67,7 +67,7 @@ In der Datenbankebene können die Datensätze importiert, exportiert und durchsu
 Weiters stehen Unterlisten zum Anzeigen der Serien einer Studie zur Verfügung.
 Unter der Listenansicht werden die ausgewählten Einträge als Thumbnails und in einem minimalen 2D Betrachter,
 welche die wichtigsten Funktionen der Betrachtungsebene implementiert, zur Vorschau dargestellt.
-In der Betrachtungsebene \ref{fig:osiri_2dView_toolbar} \ref{fig:osirix_2dView_splitWindow} finden sich die eigentlichen Funktionen und Tools welche für die Interaktion mit den Bildern notwendig sind.
+In der Betrachtungsebene (Siehe Figure \ref{fig:osiri_2dView_toolbar} und \ref{fig:osirix_2dView_splitWindow}) finden sich die eigentlichen Funktionen und Tools welche für die Interaktion mit den Bildern notwendig sind.
 Dafür bietet OsiriX eine große Funktionspalette, wobei hier nur auf die Kernfunktionalität eingegangen wird \cite{osirix}.
 \paragraph{Funktionsumfang}
 Die Steuerung für die Tools zur Interaktion mit dem Volume erfolgt mit der Maus, 
@@ -103,8 +103,9 @@ so wird beim Navigieren durch das Volume in einem Fenster die Position der Schni
 %----------------------------------------------
 \subsection{PACS Workstation - AFGA Impax DS3000}
 \label{sec:PACS_Workstation}
-\R{Als Beispiel für ein in der radiologischen Praxis (am Allgememeinen Krankenhaus Wien AKH) verwendetes state of the art PACS wurde das AFGA Impax DS3000 zum Vergleich herangezogen. }Die Impax DS3000 Radiologie Diagnosestation ist eine Client-Software für ein PACS System.
-Der Aufbau der Software ist ähnlich wie bei OSIRIX \ref{sec:Osirix} in eine Ebene zum Durchsuchen der Datensätze und eine Betrachtungsebene \ref{fig:impacs_2d_view}\Rc{gscheit auf die fig verweisen}  unterteilt.
+Als Beispiel für ein in der radiologischen Praxis (am Allgememeinen Krankenhaus Wien AKH) verwendetes state of the art PACS wurde das AFGA Impax DS3000 zum Vergleich herangezogen. 
+Die Impax DS3000 Radiologie Diagnosestation ist eine Client-Software für ein PACS System.
+Der Aufbau der Software ist ähnlich wie bei OSIRIX \ref{sec:Osirix} in eine Ebene zum Durchsuchen der Datensätze und eine Betrachtungsebene (Siehe Figure \ref{fig:impacs_2d_view}) unterteilt.
 %
 \begin{figure}[t]
 	\centering
@@ -113,12 +114,12 @@ Der Aufbau der Software ist ähnlich wie bei OSIRIX \ref{sec:Osirix} in eine Ebe
 	\label{fig:impacs_2d_view}
 \end{figure}
 %
-Die Ebene für die Datensätze bietet Funktionen zum Durchsuchen von PACS Archiven anhand verschiedene\R{r} Parameter wie Name, Patientenkennung oder Geburtsdatum.
-Weiters können in dieser Ebene Arbeitslisten erstellt werden, in der sich die RadiologIn \Rd{eine Menge von Fällen zum Befunden}\R{die Fälle für die Befundung} zusammenstellen kann.
-Es gibt auch Tools zum automatischen Erstellen von Arbeitslisten anhand \Rc{diverser} \R{von Suchkriterien}\Rd{  Kriterien} wie zum Beispiel alle CT-Aufnahmen des heutigen Tages.
+Die Ebene für die Datensätze bietet Funktionen zum Durchsuchen von PACS Archiven anhand verschiedener Parameter wie Name, Patientenkennung oder Geburtsdatum.
+Weiters können in dieser Ebene Arbeitslisten erstellt werden, in der sich die RadiologIn die Fälle für die Befundung zusammenstellen kann.
+Es gibt auch Tools zum automatischen Erstellen von Arbeitslisten anhand von Suchkriterien wie zum Beispiel alle CT-Aufnahmen des heutigen Tages.
 %
-Die Betrachtungsebene bietet mit den Tools für Fensterung, Positionierung, Zoom, Navigation im Volume und dem \R{E}\Rd{e}inzeichnen von ROIs die selbe Kernfunktionalität wie Osirix.
-Auch bei Impax DS3000 werden diese Funktionen mit der Maus kontrolliert, deren Auswahl über ein Kontextmenu erfolgt\R{,} welches mit der rechten Maustaste aktiviert wird.
+Die Betrachtungsebene bietet mit den Tools für Fensterung, Positionierung, Zoom, Navigation im Volume und dem Einzeichnen von ROIs die selbe Kernfunktionalität wie Osirix.
+Auch bei Impax DS3000 werden diese Funktionen mit der Maus kontrolliert, deren Auswahl über ein Kontextmenu erfolgt, welches mit der rechten Maustaste aktiviert wird.
 Auch hier ist eine Aufteilung des Bildschirmes möglich um Bilder aus einer Serie oder aus verschiedenen Serien miteinander zu vergleichen.
 
 
