--- a/s1_introduction.tex
+++ b/s1_introduction.tex
@@ -57,7 +57,7 @@ Dazu muss das User-Interface die grundlegenden Funktionen eines Betrachtungstool
 %----------------------------------------------
 \subsubsection{Java basiertes Interface}
 \label{sec:Java basiertes Interface}
-Paralell zur \C{Applikation in dieser Projketarbeit} wurde im Rahmen des KHRESMOI-Projektes auch einen auf Java basierendes Interface System entwickelt,
+Paralell zur Applikation in dieser Projektarbeit wurde im Rahmen des KHRESMOI-Projektes auch einen auf Java basierendes Interface System entwickelt,
 welches eine Schnittstelle zum vollständigen Funktionsumfang von KRESHMOI bietet.
 Bei diesem System gibt es verschiedene Versionen für Desktop, Browser, Mobile und eine spezielle Radiologie-Version (Siehe Figure \ref{fig:javabased_interface}), welche nur als Java Anwendung vorliegt.
 Diese verfügt ebenfalls über Tools zur Betrachtung und Interaktion mit den Volumes und zu erstellen von Bild-Suchanfragen.
