--- a/s2_related-work.tex
+++ b/s2_related-work.tex
@@ -126,11 +126,11 @@ Auch hier ist eine Aufteilung des Bildschirmes möglich um Bilder aus einer Seri
 %----------------------------------------------
 % * Vergleich der Betrachtungstools
 %----------------------------------------------
-\C{
 \subsection{Vergleich der Betrachtungstools}
 \label{sec:Vergleich der Betrachtungstools}
 Die Funktionen zur Interaktion mit den Bilddaten sind bei den beiden erwähnten Software-Produkten sehr ähnlich und auch annähernd gleich umgesetzt.
-Osirix hat einige Features wie 3D-Rendering welche zwar für die Forschung interessant sind, für die medizinische Befundung aber größere keine Rolle spielen.
-Funktionen zum Durchsuchen der Datensätze anhand einer Bild-Query weisen bei Produkte nicht auf.
-}
+Osirix hat einige Features wie 3D-Rendering welche zwar für die Forschung interessant sind, für die medizinische Befundung aber keine größere Rolle spielen.
+Funktionen zum Durchsuchen der Datensätze anhand einer Bild-Query weisen bei\R{de} Produkte nicht auf.
+\Rc{bei annähernd und grössere wird sich robert melden - versuchs ohne zu formulieren, konkreter zu machen.}
+
 
