--- a/s3_methodology.tex
+++ b/s3_methodology.tex
@@ -226,14 +226,6 @@ Um ein Suchergebniss im Vorfeld zu Beurteilen verfügt die Ergebnis-List ebenfal
 \label{sec:Technische Umsetzung}
 
 %----------------------------------------------
-% ** 2D Betrachter
-%----------------------------------------------
-\subsubsection{2D Betrachter}
-\label{sec:2D Betrachter}
-Für die Implementierung des 2D-Betrachters wurde neben Cappuccino für die Bedienelemente auch noch Pixi.JS für das Grafikfenster zur darstellung des Volumes verwendet.
-
-
-%----------------------------------------------
 % ** Berehnung der Fensterung
 %----------------------------------------------
 \subsubsection{Berehnung der Fensterung}
@@ -259,6 +251,7 @@ Für die Fensterung müssen alle Speicherstellen für die Farbe transformiert un
 Um unnötige Berechnungen für jedes einzelne Pixel zu sparen, werden pro Fensterungsschritt alle Pixelwerte zwischen 0 und 255 einmal vor berechnet und in einer LookUp Tabelle als Array gespeichert.
 Anstatt den Wert für jedes Pixel neu zu berechen und zu runden fungiert bei diesem Ansatz der aktuelle Wert eines Pixels als Schlüssel für die Tabelle welche den neuen Wert des Pixels enthält.
 Die Anzahl der Operationen wird dabei auf 255 Berechnungen und die Anzahl der Speicherzugriffe pro Bildpunkt sowie die der LookUp Tabelle reduziert.
+\begin{figure}[t]
 \begin{lstlisting}[
 	language=JavaScript,
 	firstnumber=1,
@@ -284,6 +277,9 @@ function calcWindowForDomElement(domElement, contrast, brightness)
     ctx.putImageData(image,0,0);
 }
 \end{lstlisting}
+\end{figure}
+%
+\begin{figure}[t]
 \begin{lstlisting}[
 	language=JavaScript,
 	firstnumber=1,
@@ -293,15 +289,16 @@ function getLookUpTable(contrast, brightness){
     var lut = new Array();
 
     for(var i = 0; i < 256; i++){
-        var newValue = Math.round(contrast * i + brightness);
-        if(newValue < 0) newValue = 0;
-        if(newValue > 255) newValue = 255;
-        lut[i] = newValue;
+        var newVal = Math.round(contrast * i + brightness);
+        if(newVal < 0) newVal = 0;
+        if(newVal > 255) newVal = 255;
+        lut[i] = newVal;
     }
 
     return lut;
 }
 \end{lstlisting}
+\end{figure}
 
 \paragraph{WebGL}
 Die Berechnung der Fensterung in der WebGL Grafik Pipeline erfolgt im Fragment-Shader.
@@ -340,6 +337,38 @@ void main() {
 
 
 %----------------------------------------------
+% ** 2D Betrachter
+%----------------------------------------------
+\subsubsection{2D Betrachter}
+\label{sec:2D Betrachter}
+Für die Implementierung des 2D-Betrachters wurde neben Cappuccino für die Bedienelemente auch noch Pixi.JS für das Grafikfenster zur Darstellung des Volumes verwendet.
+Der Inhalt des Grafikfensters ergibt sich aus den inhalt von mehreren übereinanderliegenden Layern.
+\begin{itemize}
+	\item \textbf{ImageLayer} zur Darstellung der Schnitte des Volumes
+	\item \textbf{AnotationLayer} zum zeichnen der ROIs
+	\item \textbf{ZoomLayer} zur Darstellung des Zoom-Rechecks
+	\item \textbf{ReportLayer} zum Render des Berichtes in das Bild
+\end{itemize}
+Bei diesen Layern werden Skalierung und Positionierung nur auf den ImageLayer und den AnotationLayer angewendet, die anderen füllen jeweils nur das ganze Grafikfenster aus.
+Um die Software möglichst erweiterbar zu gestalten,
+wurde eine LayerKlasse $PixiLayer$ entwickelt welcher eine beliebige Menge von Sublayern hizugefügt werden kann.
+Dabei wird zwischen statischen Sublayern welche jeweils nur die Anzeigefläche ausfüllen und dynamischen Sublayern welche gemeinsam skaliert und positioniert werden können unterschieden.
+Diese Layerklasse erledigt auch die konvertierung von Punkten zwischen den dynamischen und den statischen Sublayern, in Hisicht auf Postion, Skalierung und Layerdimension.
+Da die restliche GUI mit Cappuccino aufgebaut wurde und dieses Framework auch die Ereignisse für Größenänderungen der einzelen Views behandelt,
+müssen diese vom ViewObjekt welches den 2D-Betrachter Kapselt an das Grafikfenster weiter gegeben werden.
+Ansonsten ist das Pixi.JS basierte Grafikfenster durch die LayerKlassen bis auf Funktionen zur Übergabe der Anzeigedaten und zur Punktkonvertierung vom 2D-Betrachter abgeschottet.
+Die eigentliche Logik des Betrachters ist in den Layern zugeordnete Controller-Klassen gekapselt.
+Die Betrachter-Klasse selbst ist hauptsächlich für die Erstelltung der Bedienelemente und die Behandlung von Events verantwortlich.
+\begin{figure}[t]
+	\centering
+		\includegraphics[width=\linewidth]{img/s3_2dview_class_structure.jpg}
+	\caption{Struktur des 2D-Betrachters als Klassendiagramm}
+	\label{fig:omip_aplication_layout}
+\end{figure}
+
+
+
+%----------------------------------------------
 % * Kommunikation mit KRESHMOI
 %----------------------------------------------
 \subsection{Kommunikation mit KRESHMOI}
@@ -364,6 +393,7 @@ Liefert ein Array von Datensätzen zurück welche anhand der Übergebenen Suchkr
 Eine Suchanfrage basiert immer auf einen Datensatz welcher in der Anfrage übergeben werden muss.
 In diesem Datensatz werden weiters Interessante Bereiche sogenannte ROIs (Region of Interesst) in den einzelnen Schnittbildern definiert.
 Die Übergabe einer ROI erfolgt als Polygon in Form einer Listen von Punkten im Dreidimensionalen Raum des Volumes.
+\begin{figure}[t]
 \begin{lstlisting}[
 	language=json,
 	firstnumber=1,
@@ -385,8 +415,10 @@ Die Übergabe einer ROI erfolgt als Polygon in Form einer Listen von Punkten im 
    ]
 }
 \end{lstlisting}
+\end{figure}
 
 
+\begin{figure}[t]
 \begin{lstlisting}[
 	language=json,
 	firstnumber=1,
@@ -407,6 +439,7 @@ Die Übergabe einer ROI erfolgt als Polygon in Form einer Listen von Punkten im 
    ]
 }
 \end{lstlisting}
+\end{figure}
 
 %----------------------------------------------
 % ** Laden der Bilder
@@ -433,37 +466,6 @@ Beispiel:
 %TODO: Zitieren von KRESHMOI API
 %TODO: Zitieren der Schnittebenen
 %TODO: Bild ist wikipedia ok: http://de.wikipedia.org/wiki/Anatomische_Lage-_und_Richtungsbezeichnungen
-
-%----------------------------------------------
-% * Architektur und Komponenten
-%----------------------------------------------
-\subsection{Architektur und Komponenten}
-\label{sec:Architektur und Komponenten}
-
-%----------------------------------------------
-% ** Domänen Model
-%----------------------------------------------
-\subsubsection{Domänen Model}
-\label{sec:Domänen Model}
-
-%----------------------------------------------
-% ** Architektur und Aufteilung in Komponenten
-%----------------------------------------------
-\subsubsection{Architektur und Aufteilung in Komponenten}
-\label{sec:Architektur und Aufteilung in Komponenten}
-
-%----------------------------------------------
-% ** 2DView
-%----------------------------------------------
-\subsubsection{2DView}
-\label{sec:2DView}
-
-
-%----------------------------------------------
-% ** Kommunikations Module
-%----------------------------------------------
-\subsubsection{Kommunikations Module}
-\label{sec:Kommunikations Module}
 
 %----------------------------------------------
 % * Usability
